syntax = "proto3";

package atlas.rpc;

option go_package = "github.com/infobloxopen/atlas-app-toolkit/rpc/errfields;errfields";

// FieldsInfo is a default representation of field details that conforms
// REST API Syntax Specification
message FieldInfo {
    map<string, StringListValue> fields = 1;
}

message StringListValue {
    repeated string values = 1;
}
